--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL81Dialect
-        show_sql: true
+        show_sql: false
         format_sql: true
         use_sql_comments: true
     hibernate:
