--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL81Dialect
+        dialect: com.nekromant.telegram.utils.CustomDialectUtils # org.hibernate.dialect.PostgreSQL81Dialect
         show_sql: false
         format_sql: true
         use_sql_comments: true
