--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,68 @@
+name: Build & Deploy
 
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  push_compose:
+    name: Push docker-compose.yaml to remote server
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Copy docker-compose.yaml via SSH
+        uses: appleboy/scp-action@master
+        with:
+          host: overridetech.ru
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: 22
+          source: "docker-compose.yaml"
+          target: "/home/${{ secrets.SSH_USER }}"
+          overwrite: true
+
+  build_and_push_images:
+    name: Push image to DockerHub
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Telegram Bot Build and Push to Dockerhub
+        uses: docker/build-push-action@v2
+        with:
+          file: /review-report-bot-fork/Dockerfile
+          push: true
+          tags: vladimirbalakin933/review-bot
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: [build_and_push_images]
+    steps:
+      - name: Connect with SSH and Deploy
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: overridetech.ru
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            echo TELEGRAM_BOT_DB_USER = ${{ secrets.TELEGRAM_BOT_DB_USER }} >> review-bot-env.txt
+            echo TELEGRAM_BOT_DB_PASSWORD = ${{ secrets.TELEGRAM_BOT_DB_PASSWORD }} >> review-bot-env.txt
+            echo TELEGRAM_BOT_DB_PORT = 5432 >> review-bot-env.txt
+            echo TELEGRAM_BOT_DB_HOST = telegram-bot-db >> review-bot-env.txt
+            echo TELEGRAM_BOT_TOKEN = ${{ secrets.TELEGRAM_BOT_TOKEN }} >> review-bot-env.txt
+                        
+            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker stop review-bot
+            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker rm review-bot
+            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker rmi vladimirbalakin933/review-bot
+            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker-compose -f docker-compose.yaml --env-file=review-bot-env.txt up -d
+            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker ps -a  
+            rm review-bot-env.txt
