--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ owner:
 
 
 server:
-  port: ${REVIEW_BOT_PORT}
+  port: ${REVIEW_BOT_PORT}:9010
   host: "https://overridetech.ru/review-report-bot"
 
 reminders:
