--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>hibernate-types-52</artifactId>
             <version>2.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
