--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
     <version>0.0.2-SNAPSHOT</version>
     <name>Mentoring review telegram bot</name>
 
+    <properties>
+        <java.version>11</java.version>
+        <spring-cloud.version>2021.0.6</spring-cloud.version>
+        <logstash-logback-encoder.version>6.1</logstash-logback-encoder.version>
+    </properties>
+
 
     <dependencies>
         <dependency>
@@ -62,7 +68,7 @@
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambotsextensions</artifactId>
-            <version>LATEST</version>
+            <version>6.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -84,6 +90,20 @@
             <artifactId>hibernate-types-52</artifactId>
             <version>2.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${logstash-logback-encoder.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>logbook-spring-boot-starter</artifactId>
+            <version>2.16.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
