--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Review Bot Build and Push to Dockerhub
         uses: docker/build-push-action@v2
         with:
-          file: /Dockerfile
+          file: ./Dockerfile
           push: true
           tags: nekromant322/review-bot
 
