multi-directory view resolution fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
       POSTGRES_HOST: review-bot-db
       POSTGRES_DB: review_bot
       TELEGRAM_BOT_DB_PORT: 5432
-      POSTGRES_USER: ${REVIEW_BOT_DB_USER}
-      POSTGRES_PASSWORD: ${REVIEW_BOT_DB_PASSWORD}
+      POSTGRES_USER: ${REVIEW_BOT_DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${REVIEW_BOT_DB_PASSWORD:-postgres}
       TELEGRAM_BOT_NAME: ${TELEGRAM_BOT_NAME:-MentoringReviewBot}
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
 
