promocode admin pass added to envs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       POSTGRES_PASSWORD: ${REVIEW_BOT_DB_PASSWORD:-postgres}
       TELEGRAM_BOT_NAME: ${TELEGRAM_BOT_NAME:-MentoringReviewBot}
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
+      OWNER_PASSWORD: ${OWNER_PASSWORD}
 
       LIFE_PAY_LOGIN: ${LIFE_PAY_LOGIN}
       LIFE_PAY_KEY: ${LIFE_PAY_KEY}
