--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,16 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Copy docker-compose.yaml via SSH
+      - name: Copy docker-compose.yml to server
         uses: appleboy/scp-action@master
         with:
-          host: overridetech.ru
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
+          host: "194.87.237.176"
+          username: "github-review-bot"
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           source: "docker-compose.yml"
-          target: "/home/${{ secrets.SSH_USER }}"
-          overwrite: true
+          target: "/home/github-review-bot"
 
   build_and_push_images:
     name: Push image to DockerHub
@@ -48,11 +47,11 @@ jobs:
     needs: [build_and_push_images, push_compose]
     steps:
       - name: Connect with SSH and Deploy
-        uses: appleboy/ssh-action@v0.1.8
+        uses: appleboy/ssh-action@master
         with:
-          host: overridetech.ru
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
+          host: "194.87.237.176"
+          username: "github-review-bot"
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             echo REVIEW_BOT_DB_USER = ${{ secrets.REVIEW_BOT_DB_USER }} >> review-bot-env.txt
             echo REVIEW_BOT_DB_PASSWORD = ${{ secrets.REVIEW_BOT_DB_PASSWORD }} >> review-bot-env.txt
@@ -62,10 +61,10 @@ jobs:
             echo LIFE_PAY_KEY = ${{ secrets.LIFE_PAY_KEY }} >> review-bot-env.txt
             echo OWNER_PASSWORD = ${{secrets.OWNER_PASSWORD}} >> review-bot-env.txt
                        
-            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker stop review-bot
-            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker rm review-bot
-            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker rmi nekromant322/review-bot
-            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker-compose -f docker-compose.yml --env-file=review-bot-env.txt up -d
-            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker ps -a  
+            sudo -S docker stop review-bot
+            sudo -S docker rm review-bot
+            sudo -S docker rmi nekromant322/review-bot
+            sudo -S docker-compose -f docker-compose.yml --env-file=review-bot-env.txt up -d
+            sudo -S docker ps -a  
             
             rm review-bot-env.txt
