--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
             sudo -S docker stop review-bot
             sudo -S docker rm review-bot
             sudo -S docker rmi nekromant322/review-bot
-            sudo -S docker-compose -f docker-compose.yml --env-file=review-bot-env.txt up -d
+            sudo -S docker compose -f docker-compose.yml --env-file=review-bot-env.txt up -d
             sudo -S docker ps -a  
             
             rm review-bot-env.txt
