--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       LIFE_PAY_LOGIN: ${LIFE_PAY_LOGIN}
       LIFE_PAY_KEY: ${LIFE_PAY_KEY}
       OWNER_PASSWORD: ${OWNER_PASSWORD}
+      CALL_PRICE: ${CALL_PRICE}
     ports:
       - "9100:8080"
     logging:
