Replace identification of entities by username with identification by telegram id

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,8 +46,12 @@ spring:
         format_sql: true
         use_sql_comments: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     generate-ddl: true
+
+  liquibase:
+    enabled: true
+    change-log: db/changelog/db.changelog-master.xml
 
 lombok:
   accessors:
