--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
             <artifactId>logbook-spring-boot-starter</artifactId>
             <version>2.16.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.29.2</version>
+        </dependency>
     </dependencies>
 
     <build>
