--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,12 +46,8 @@ spring:
         format_sql: true
         use_sql_comments: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     generate-ddl: true
-
-  liquibase:
-    enabled: true
-    change-log: db/changelog/db.changelog-master.xml
 
 lombok:
   accessors:
