--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       CALL_PRICE: ${CALL_PRICE}
       TELEGRAM_BOT_PORT: ${TELEGRAM_BOT_PORT:-8080}
       TELEGRAM_BOT_PROFILE: ${TELEGRAM_BOT_PROFILE:-prod}
+      TIMEZONE_API_KEY: ${TIMEZONE_API_KEY}
     ports:
       - "9100:8080"
     logging:
