--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,7 @@ jobs:
             echo TELEGRAM_BOT_PROFILE = prod >> review-bot-env.txt
             echo TELEGRAM_BOT_PORT = 8080 >> review-bot-env.txt
             echo TELEGRAM_BOT_HOST = https://overridetech.ru/review-bot >> review-bot-env.txt
+            echo TIMEZONE_API_KEY = ${{ secrets.TIMEZONE_API_KEY }} >> review-bot-env.txt
                        
             sudo -S docker stop review-bot
             sudo -S docker rm review-bot
